[gd_scene load_steps=5 format=2]

[ext_resource path="res://Utils/Physics Bodies/kinematic_body_2p5d.gd" type="Script" id=1]
[ext_resource path="res://Utils/Composite Polygon 2D/composite_polygon_2d.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 15, 15 )

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true
radius = 18.0

[node name="KinematicBody2P5D" type="Area2D"]
collision_mask = 3
script = ExtResource( 1 )

[node name="VolumeShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="BaseSkin" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="BaseShape" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0.764706 )
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 )
polygons = [ PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 ) ]
script = ExtResource( 2 )
[connection signal="polygon_changed" from="BaseShape" to="." method="_on_BaseShape_polygon_changed"]
